syntax = "proto3";

import "google/protobuf/empty.proto";

package model;

option go_package = ".";

message UserServices {
    string name  = 1;
    string phone = 2;
    string age = 3;
}

message ListUsers {
    repeated UserServices list = 1; 
}

message ByName {
    string name = 1;
}

service Users {
    rpc CreateUser (UserServices) returns (UserServices);
    rpc GetListUser (google.protobuf.Empty) returns (ListUsers);
    rpc GetByName (ByName) returns (UserServices);
}

    